--- a/public/stylesheets/vaults.css
+++ b/public/stylesheets/vaults.css
@@ -17,11 +17,11 @@
 
 .vaultBlock {
     /* text-align: center; */
-    height: 60px;
+    height: 55px;
     width: 100px;
     margin: 10px;
     background: #eee;
-    background-color:goldenrod;
+    background-color:#409D69;
     border: solid black 1px;
     padding-top: .6rem;
     font-family: "Lato",
@@ -42,11 +42,13 @@ h1 {
     background: #eee;
 }
 
-
+#link {
+    color:#eee
+}
 
 #link:hover {
     background-color: rgb(53, 34, 19);
-    color: #eee;
+    color: black;
     text-decoration: none;
 }
 
@@ -105,4 +107,5 @@ h1 {
     Helvetica,
     Arial,
     sans-serif;
+    margin-top: .4rem;
 }
