--- a/views/movies.pug
+++ b/views/movies.pug
@@ -6,11 +6,21 @@ block content
       +validationErrorSummary(errors)
     else if newMoviesArray
       h1.movieHeader Movies
+      h2 Please select a movie
       div.movieContainer
         each movie in newMoviesArray
-          div.movieBlock
-              a(href=`/movies/${movie.id}`)
-                img(src= movie.posterPath id= 'moviePoster')
+          if movie.posterPath
+            div.movieBlock
+              img(src= `https://image.tmdb.org/t/p/w342/${movie.posterPath}` id= 'moviePoster')
+              form(action="/movies/newMovie", method="post")
+                input(type='hidden' name='_csrf' value=token)
+                input(type="hidden", name="title", value=movie.title)
+                input(type="hidden", name="description", value=movie.description)
+                input(type="hidden", name="releaseDate", value=movie.releaseDate)
+                input(type="hidden", name="posterPath", value=`https://image.tmdb.org/t/p/w342/${movie.posterPath}`)
+                input(type="hidden", name="genreId", value=movie.genreId)
+                button(type='submit' class="nav-button")= movie.title
+              p= movie.releaseYear
                 //- div.hiddenDescr Test Description
     else
       h1.movieHeader Movies
@@ -20,3 +30,6 @@ block content
               a(href=`/movies/${movie.id}`)
                 img(src= movie.posterPath id= 'moviePoster')
                 //- div.hiddenDescr Test Description
+
+
+  //- a(href=`/movies/${movie.title}%${movie.description}%${movie.releaseDate}%${movie.posterPath}%${movie.genreId}`)
