--- a/public/stylesheets/reviews.css
+++ b/public/stylesheets/reviews.css
@@ -29,10 +29,6 @@
     border-radius: 3px;
     font-family: "Lato", "Helvetica Neue", Helvetica, Arial, sans-serif;
     font-weight: bold;
-    overflow: hidden;
-    text-align: center;
-    word-wrap: normal;
-    white-space: nowrap;
 }
 
 
@@ -41,13 +37,9 @@
     height: auto;
     display: grid;
     gap: 10px;
-    padding: 30px 0;
+    padding: 30px 15px;
 }
 
-.edit-button {
-    position: absolute;
-    right: 75px;
-}
 
 .date {
     position: relative;
@@ -59,20 +51,64 @@
     top: 20px;
 }
 
-.delete-button {
-    position: absolute;
-    right: 20px;
-}
 
 .review {
-    width: 100%;
-    background-color: grey;
+    width: 50%;
+    background-color:rgb(243, 241, 235);
     border: 1px solid black;
-    display: flex;
-    padding: 20px 5px;
-    align-items: center;
-<<<<<<< HEAD
+    /* display: flex; */
+    padding: 20px 5px 0 5px;
+    margin: 0 0 25px 0;
+    /* align-items: center; */
     font-family: 14px "Lato", "Helvetica Neue", "Helvetica", sans-serif;
-=======
->>>>>>> 01d85247826a836d55e801c32c2a2a420b528e63
+    flex-direction: row;
+    justify-content: space-between;
+    /* justify-content: flex-end; */
+}
+
+.review-buttons {
+    display: flex;
+    position: relative;
+    top: 23px;
+    justify-content: flex-start;
+    justify-content: space-between;
+    width: 120px;
+}
+
+.edit-button {
+    /* position: relative; */
+    border-radius: 3px;
+    font-family: "Lato", "Helvetica Neue", Helvetica, Arial, sans-serif;
+    background-color: green;
+    color: white;
+    font-weight: bold;
+}
+
+.delete-button {
+    border-radius: 3px;
+    font-family: "Lato", "Helvetica Neue", Helvetica, Arial, sans-serif;
+    background-color: red;
+    color: white;
+    font-weight: bold;
+}
+
+.edit-button:hover {
+    background-color: black;
+    color: white;
+}
+
+.delete-button:hover {
+    background-color: black;
+    color: white;
+}
+
+.review-edit {
+    width: auto;
+    background-color:rgb(243, 241, 235);
+    border: 1px solid black;
+    padding: 30px;
+    margin: 0 0 25px 0;
+    font-family: 14px "Lato", "Helvetica Neue", "Helvetica", sans-serif;
+    flex-direction: row;
+    justify-content: space-between;
 }
