--- a/views/layout.pug
+++ b/views/layout.pug
@@ -20,9 +20,13 @@ html
         div
           a(href="/") Home
         div
-          a(href="/") Movie Catalogue
+          a(href="/login") Log In
         div
-          a(href="/") Your Movie Vaults
+          a(href="/signup") Register
+        div
+          a(href="/movies") Movie Catalogue
+        div
+          a(href="/vaults") Your Movie Vaults
 
       div(class='connectWithUs')
         h3(class="connectWithUs-h3") Connect With Us
