styling of add movie buttons

--- a/public/stylesheets/movie.css
+++ b/public/stylesheets/movie.css
@@ -18,8 +18,15 @@
 }
 
 .movieBlock {
+    display: flex;
+    flex-direction: column;
+    align-content: center;
     text-align: center;
     margin: 10px;
+}
+
+.movieBlock form {
+  align-self: center;
 }
 
 .movieBlock img {
