finished watched indicator styled addtovault button

--- a/views/movie.pug
+++ b/views/movie.pug
@@ -1,5 +1,7 @@
 extends layout
 
+include utils.pug
+
 append head
   script(src="/javascripts/movie.js" type="module" defer)
 
@@ -14,22 +16,20 @@ block content
               form(action=`/movies/:id/watched` method='post')
                 input(type='hidden' name='_csrf' value=token)
                 input#movieId(type='hidden' name='movieId' value=movie.id)
-                input(type='hidden' name='watched' value='watched')
                 button#watched(type="submit")
                   if watched
-                    span#watched Watched
+                    span#watchedSpan Watched
                   else
-                    span#watched Unwatched
+                    span#watchedSpan Unwatched
             if vaults
               form(action=`/movies/:id/vaulted` method='post')
                 input(type='hidden' name='_csrf' value=token)
                 input(type='hidden' name='movieId' value=movie.id)
-                input(type='hidden' name='addToVault' value='added')
-                button#addToVault(type="submit")
-                  span#buttonSpan Add To Vault
-                select(name='vaultId')
+                select#select(name='vaultId')
+                  option(value='') --Choose Vault--
                   each vault in vaults
                     option(value=vault.id)= vault.name
+                button#addToVault(type="submit") ➕
       div#moviecont
         h1#movietitle.movieHeader= movie.title
         br
