--- a/public/stylesheets/movie.css
+++ b/public/stylesheets/movie.css
@@ -113,7 +113,7 @@
 
 .watchedbutton {
   border-width: 0px;
-  width: 140px;
+  /* width: 140px; */
   background-color: #409d69;
   color: #FFF;
   border-radius: 3px;
@@ -156,5 +156,10 @@
   text-shadow: none;
   align-items: flex-start;
   font: 400 13.3333px Arial;
+}
+
+#addToVault {
+  font-size: 10px;
+  background-color: #409d69;
 
 }
