--- a/views/index.pug
+++ b/views/index.pug
@@ -8,24 +8,25 @@ append head
 
 block content
   main(class='mainContentContainer')
-    div(class='description')
-      h2 Welcome!
-      p FilmUp is a hub for cinephiles and movie recommendations.
-      p Our mission is to help people find and share movies they love.
 
-    div(class='recentlyAdded')
-      h2 Recently Added Movies
-      div(class='recentlyAddedContainer')
-        each recentMovie in recentMovies
-          div(class='recentMovie')
-            a(href=`/movies/${recentMovie.id}`)
-              img(src= recentMovie.posterPath id= 'moviePoster')
-              //- div.hiddenDescr Test Description
+    div(class='mainContentContainer_left')
+      div(class='description')
+        h2 Welcome!
+        p FilmUp is a hub for cinephiles and movie recommendations.
+        p Our mission is to help people find and share movies they love.
 
-    div(class='moviesByGenre')
-      h2#genreTitle Movie Genres
-      each genre in genres
-        //- TODO: IMPLEMENT LINK TO SHOW LIST OF MOVIES IN A GENRE
-        div.genreBlock
-          a(href=`/movies/genre/${genre.id}`)
-            h2= genre.name
+      div(class='moviesByGenre')
+        h2#genreTitle Movie Genres
+        each genre in genres
+          div.genreBlock
+            a(href=`/movies/genre/${genre.id}`)
+              h2= genre.name
+
+    div(class='mainContentContainer_right')
+      div(class='recentlyAdded')
+        h2 Recently Added Movies
+        div(class='recentlyAddedContainer')
+          each recentMovie in recentMovies
+            div(class='recentMovie')
+              a(href=`/movies/${recentMovie.id}`)
+                img(src= recentMovie.posterPath id= 'moviePoster')
