--- a/views/vaults.pug
+++ b/views/vaults.pug
@@ -8,7 +8,7 @@ block content
             div.vaultSpace
             button(type="submit" id="createVault") Create Vault
             if userVaults
-                h2 You have the max amount of vaults
+                h2 Sorry! You have the max amount of vaults.
     h1 My Vaults
     div.vaultContainer
         each vault in vaults
