--- a/views/layout.pug
+++ b/views/layout.pug
@@ -8,6 +8,7 @@ html
         link(rel='stylesheet' href='/stylesheets/movie.css')
         link(rel='stylesheet' href='/stylesheets/reviews.css')
         link(rel='stylesheet' href='/stylesheets/vaults.css')
+        link(rel="stylesheet" href="https://use.fontawesome.com/releases/v5.3.1/css/all.css")
   body
     include utils.pug
     include navbar.pug
@@ -16,7 +17,7 @@ html
     footer
 
       div(class='siteLinks')
-        h3 Site Links
+        h2 Site Links
         div
           a(href="/") Home
         div
@@ -29,11 +30,11 @@ html
           a(href="/vaults") Your Movie Vaults
 
       div(class='connectWithUs')
-        h3(class="connectWithUs-h3") Connect With Us
-        +connectWithUsLinks("https://github.com/guipace", "Guilherme Pace")
-        +connectWithUsLinks("https://github.com/HeroRoku", "Jevon Timmons")
-        +connectWithUsLinks("https://github.com/lanejohns", "Lane Johns")
-        +connectWithUsLinks("https://github.com/MattMav21", "Matthew Hasan")
+        h2(class="connectWithUs-h3") About the Developers
+        +connectWithUsLinks("https://github.com/guipace", "https://www.linkedin.com/in/guilhermepace/", "https://angel.co/u/guilherme-pace", "Guilherme Pace")
+        +connectWithUsLinks("https://github.com/HeroRoku", "https://www.linkedin.com/in/jevon-timmons/", "https://angel.co/jevon-timmons", "Jevon Timmons")
+        +connectWithUsLinks("https://github.com/lanejohns", "https://www.linkedin.com/in/lane-johns-8880b5121/", "https://angel.co/u/lane-dalton-johns", "Lane Johns")
+        +connectWithUsLinks("https://github.com/MattMav21", "https://www.linkedin.com/in/matthew-hasan-a25011209/", "https://angel.co/u/matthew-hasan", "Matthew Hasan")
 
       small
-        span(class="footer-span") ©2021 FilmUp, Inc.
+        span(class="footer-span") ©2021 FilmUp
