--- a/public/stylesheets/reviews.css
+++ b/public/stylesheets/reviews.css
@@ -1,4 +1,3 @@
-
 .submission {
     border-radius: 3px;
     border: solid thin #DCD6CC;
@@ -10,7 +9,6 @@
     margin-left: auto;
     margin-right: auto;
 }
-
 
 .review-area {
     width: 500px;
@@ -30,30 +28,29 @@
     font-family: "Lato", "Helvetica Neue", Helvetica, Arial, sans-serif;
     font-weight: bold;
     cursor: pointer;
+    margin-top: 0.5rem;
 }
-
 
 .review-collection {
     width: 100%;
     height: auto;
-    display: grid;
     gap: 10px;
     padding: 30px 15px;
 }
 
-
 .date {
-    position: relative;
     top: 10px;
     left: 277px;
+    width: 50%;
+    margin: auto;
 }
 
 .user {
-    position: relative;
     top: 25px;
     left: 276.5px;
+    width: 50%;
+    margin: auto;
 }
-
 
 .review {
     width: 50%;
@@ -61,18 +58,14 @@
     overflow-wrap: break-word;
     background-color:rgb(243, 241, 235);
     border: 1px solid black;
-    /* display: flex; */
     padding: 20px 5px 0 5px;
-    /* align-items: center; */
     font-family: 14px "Lato", "Helvetica Neue", "Helvetica", sans-serif;
     flex-direction: row;
     justify-content: space-between;
     margin-bottom: 50px;
-    /* justify-content: flex-end; */
 }
 
 .review-buttons {
-    /* margin: auto; */
     display: flex;
     position: relative;
     top: 25px;
@@ -80,17 +73,17 @@
     justify-content: flex-start;
     justify-content: space-between;
     width: 100px;
-    /* margin-bottom: 30px; */
 }
 
 .edit-button {
-    /* position: relative; */
     border-radius: 3px;
     font-family: "Lato", "Helvetica Neue", Helvetica, Arial, sans-serif;
     background-color: #409d69;
     color: white;
     font-weight: bold;
     cursor: pointer;
+    border-radius: 3px;
+    border: solid thin #DCD6CC;
 }
 
 .delete-button {
@@ -100,6 +93,8 @@
     color: white;
     font-weight: bold;
     cursor: pointer;
+    border-radius: 3px;
+    border: solid thin #DCD6CC;
 }
 
 .edit-button:hover {
@@ -122,7 +117,3 @@
     flex-direction: row;
     justify-content: space-between;
 }
-
-/* .rev-container {
-    margin: auto;
-} */
